# ontology_generator

./: Cargo.toml  atomic.config.json
src/: README.md  config.rs  generator.rs  main.rs
templates/crate/: Cargo.toml.tera  README.md.tera
templates/crate/src/: lib.rs.tera  mod.rs.tera  ontology.rs.tera
