[package]
name = "atomic-ontology-generator"
version = "0.1.0"
edition = "2021"
description = "Generate Rust types from Atomic Data ontologies"
license = "MIT"

[lib]
name = "atomic_ontology_generator"
path = "src/lib.rs"

[[bin]]
name = "atomic-ontology-generator"
path = "src/main.rs"

[dependencies]
tera = "1.19"
atomic_lib = { version = "0.40.0", features = ["config"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
convert_case = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"

[[example]]
name = "usage"
path = "examples/usage.rs"
